--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "e-sign-api",
-  "version": "1.0.19",
+  "version": "1.1.1",
   "description": "A simple to use controller for the E-Sign API",
   "main": "index.js",
   "scripts": {
-    "test": "e-sign test"
+    "test": "e-sign test",
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,13 @@
   "homepage": "https://github.com/Isaac-hughes/e-sign-api#readme",
   "dependencies": {
     "axios": "^0.24.0"
-  }
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11"
+  },
+  "module": "dist/index.js",
+  "es2015": "dist/index.js",
+  "typings": "dist/index"
 }
