added types files for ts support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-sign-api",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A simple to use controller for the E-Sign API",
   "main": "index.js",
   "scripts": {
@@ -33,5 +33,5 @@
   },
   "module": "dist/index.js",
   "es2015": "dist/index.js",
-  "typings": "dist/index"
+  "typings": "dist/index.d.ts"
 }
