--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "e-sign-api",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "A simple to use controller for the E-Sign API",
   "main": "index.js",
   "scripts": {
     "test": "e-sign test",
-    "build": "babel src -d dist"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/Isaac-hughes/e-sign-api#readme",
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
